# web-linker

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  makefile  pyproject.toml
migrations/: env.py
migrations/versions/: 79d8b916a502_added_users_table.py  bacb5816bcf1_create_user_and_events_tables.py
src/: bootstrap.py  main.py
src/application/: dependency_injector.py  message_bus.py
src/application/handlers/: hanlders_collector.py  register_user_command_handler.py
src/application/handlers/command_handlers/: __init__.py  register_user_command_handler.py
src/application/handlers/event_handlers/: user_created_event_handler.py
src/domain/: messages.py  repository.py  unit_of_work.py
src/domain/entities/: base_entity.py  event_entity.py  user_entity.py
src/domain/messages/: base_messages.py  event_publisher.py
src/domain/messages/commands/: register_user_command.py
src/domain/messages/events/: user_created_event.py
src/domain/models/: base_entity.py
src/infrastructure/: redis_event_publisher.py  sauow.py  sqlalchemy_unit_of_work.py
src/infrastructure/persistence/: database.py  mappers.py
src/infrastructure/persistence/repositories/: abstract_repository.py  abstract_sqlalchemy_repository.py  event_repository.py  user_repository.py
src/infrastructure/persistence/tables/: __init__.py  events_table.py  users_table.py
src/presentation/routes/: user_routes.py
src/settings/: __init__.py  envarables.py  settings.py
